--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/logo_fixed.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>orcunsOfficalWebsite</title>
 </head>
